--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,7 @@
         "editor.defaultFormatter": "ms-python.autopep8",
         "editor.codeActionsOnSave": {
             "source.organizeImports": "always"
-        }
+        },
     },
     "isort.args": [
         "--multi-line",
@@ -14,5 +14,6 @@
         "--line-length",
         "80",
         "--use-parentheses"
-    ]
+    ],
+    "ruff.organizeImports": false,
 }
