--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -6,6 +6,9 @@
     "exclude": [
         "tic80/python/build.py"
     ],
+    "ignore": [
+        "tic80/python/build.py"
+    ],
     "stubPath": "tic80/python/stubs",
     "typeCheckingMode": "basic"
 }
